fix: The sign in button is not visible if the device is in landscape mode

--- a/src/components/header/dimensions/mobile/MobileView.scss
+++ b/src/components/header/dimensions/mobile/MobileView.scss
@@ -535,6 +535,7 @@
       background: $white;
       border-radius: 10px;
       width: 280px;
+      overflow-y: auto;
       z-index: 2;
       filter: drop-shadow(0px 10px 20px rgba(136, 120, 172, 0.2));
 
@@ -670,6 +671,9 @@
             margin-right: 8px;
           }
         }
+      }
+      @media (max-height: 470px) {
+        max-height: calc(100vh - 80px);
       }
     }
   }
