--- a/src/components/header/dimensions/tablet/TabletView.scss
+++ b/src/components/header/dimensions/tablet/TabletView.scss
@@ -431,6 +431,7 @@
       border-radius: 10px;
       width: 280px;
       z-index: 2;
+      overflow-y: auto;
       filter: drop-shadow(0px 10px 20px rgba(136, 120, 172, 0.2));
 
       &__header {
@@ -567,6 +568,9 @@
             margin-right: 8px;
           }
         }
+      }
+      @media (max-height: 470px) {
+        max-height: calc(100vh - 80px);
       }
     }
   }
